--- a/mainMenu.html
+++ b/mainMenu.html
@@ -29,7 +29,7 @@
 			var monkeyDistance = document.getElementById("monkey").offsetLeft;
 			var object = document.getElementById("monkey");
 			
-			alert(localStorage.difficulty);
+			alert(localStorage.difficultyy);
 			
 			setInterval(
 				function monkeyAnimation(){
