--- a/mainMenu.html
+++ b/mainMenu.html
@@ -18,7 +18,7 @@
 			<div>
 				<!--<img src="menuImage.jpg" /> -->
 				<!--<div id="monkeyButton">-->
-				<img id ="monkey" onclick ="monkeyAnimation()" src="images/monkeySwinging.JPG"/>
+				<img id ="monkey" onclick ="monkeyAnimation()" src="images/monkeySwingingNew.png"/>
 				<!--</div> -->
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
@@ -37,7 +37,7 @@
 					if(monkeyDistance < 10){
 						object.style.display = "none";
 						setTimeout(function wait(){object.style.display = "block";}, 3000);
-						object.style.marginLeft = '809px';
+						object.style.marginLeft = '90%';
 					}
 				}
 			,8);
