--- a/tutorial.html
+++ b/tutorial.html
@@ -8,9 +8,11 @@
 		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		<div id="mainBackground">
 			<button id="monkey"></button>
-			<div id = "vine1"></div>
+<!--			<div id = "vine1"></div>-->
 			<div id = "banana"></div>
-			<div id = "vine2"></div>
+<!--
+
+		<div id = "vine2"></div> -->
 			<div id="gameInfo">
 				Time: 10 seconds
 				Scores: 15 points
