--- a/testStart.html
+++ b/testStart.html
@@ -5,16 +5,16 @@
 		<title>TestStart</title>
 	</head>
 	<body onload="languageSet()">
-
-		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
-		<div>
-			<h5 class="title" id="top">Select Difficulty</h5>
+		<div id="back">
+			<!--<div>
+				<h5 class="title" id="top">Select Difficulty</h5>
+			</div>-->
+		
+			<a href="Game.html"><button id="easy" onclick="difficulty(0)">Easy</button></a>
+			<a href="Game.html"><button id="medium" onclick="difficulty(1)">Medium</button></a>
+			<a href="Game.html"><button id="hard" onclick="difficulty(2)">Hard</button></a>
+			<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
 		</div>
-		
-		<a href="Game.html"><button id="easy" onclick="difficulty(0)">Easy</button></a>
-		<a href="Game.html"><button id="medium" onclick="difficulty(1)">Medium</button></a>
-		<a href="Game.html"><button id="hard" onclick="difficulty(2)">Hard</button></a>
-		
  	<body>	
  	
  	<script>
