--- a/mainMenu.html
+++ b/mainMenu.html
@@ -8,14 +8,14 @@
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
-		<body>
-		<!--<div id="divBack">-->
+		<body onload="languageSet()">
+		<div id="divBack">
 			<button id="settings" onclick="window.location.href='settings.html'" ></button>
 			<!--<h1 class="headers" id="title">
 			Swinging Monkey</h1>
 			<h3 class="headers" id="companyTitle">
 			Studio de Singe</h3>-->
-			<div>
+			<!--<div>-->
 				<!--<img src="menuImage.jpg" /> -->
 				<!--<div id="monkeyButton">-->
 				<img id ="monkey" onclick ="monkeyAnimation()" src="images/monkeySwingingNew.png"/>
@@ -23,8 +23,8 @@
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
 				<button id ="highScoresButton" onclick="window.location.href='highScores.html'"></button>
-			</div>
-		<!--</div>-->
+			<!--</div>-->
+		</div>
 		<script>
 			var monkeyDistance = document.getElementById("monkey").offsetLeft;
 			var object = document.getElementById("monkey");
@@ -37,10 +37,23 @@
 					if(monkeyDistance < 10){
 						object.style.display = "none";
 						setTimeout(function wait(){object.style.display = "block";}, 3000);
-						object.style.marginLeft = '90%';
+						object.style.marginLeft = '900px';
 					}
 				}
 			,8);
+			
+			function languageSet() {
+				if(localStorage.getItem('language') == 'english'){
+				//	document.getElementById("startButton").innerHTML="Start Game";
+				//	document.getElementById("tutorialButton").innerHTML="Instructions";
+				//	document.getElementById("highScoresButton").innerHTML="High Scores"
+				}
+				else {
+				//	document.getElementById("startButton").innerHTML="Joue";
+				//	document.getElementById("tutorialButton").innerHTML="Instructions";
+				//	document.getElementById("highScoresButton").innerHTML="Haut Scores"
+				}
+			}
 
 			function startGame(){
 			console.log("clicked");
