--- a/endGame.html
+++ b/endGame.html
@@ -5,7 +5,7 @@
 		<title>End Game</title>
 	</head>
 	<body onload="checkScore()">
-		<div>
+		<div id="back">
 			<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 		</div>
 		<script>
