--- a/tutorial.html
+++ b/tutorial.html
@@ -5,35 +5,35 @@
 		<title>Tutorial</title>
 		</head>
 	<body>
-		<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
-		<div id="mainBackground">
-			<button id="monkey"></button>
+		<div id="back">
+			<button id="returnHome" onclick="window.location.href='mainMenu.html'">Back</button>
+			<div id="mainBackground">
+				<button id="monkey"></button>
 <!--			<div id = "vine1"></div>-->
-			<div id = "banana"></div>
-<!--
-
-		<div id = "vine2"></div> -->
-			<div id="gameInfo">
-				Time: 10 seconds
-				Scores: 15 points
-				Difficulty: Medium
-				Lives: <3<3<3<3<3
-			</div>
-			<div id = "numberArea"> 6 + 4 = ___ </div>
-			<div id="calculatorScreen"> 2 </div>
-			<div id="calculator">
-				<!--<button id = "number1" class = "number">1</button>
-				<button id = "number2" class = "number">2</button>
-				<button id = "number3" class = "number">3</button>
-				<button id = "number4" class = "number">4</button>
-				<button id = "number5" class = "number">5</button>
-				<button id = "number6" class = "number">6</button>
-				<button id = "number7" class = "number">7</button>
-				<button id = "number8" class = "number">8</button>
-				<button id = "number9" class = "number">9</button>
-				<button id = "placeHolder1" class = "number"></button>
-				<button id = "number0" class = "number">0</button>
-				<button id = "placeHolder2" class = "number"></button>-->
+				<div id = "banana"></div>
+<!--			<div id = "vine2"></div> -->
+				<div id="gameInfo">
+					Time: 10 seconds
+					Scores: 15 points
+					Difficulty: Medium
+					Lives: <3<3<3<3<3
+				</div>
+				<div id = "numberArea"> 6 + 4 = ___ </div>
+				<div id="calculatorScreen"> 2 </div>
+				<div id="calculator">
+					<!--<button id = "number1" class = "number">1</button>
+					<button id = "number2" class = "number">2</button>
+					<button id = "number3" class = "number">3</button>
+					<button id = "number4" class = "number">4</button>
+					<button id = "number5" class = "number">5</button>
+					<button id = "number6" class = "number">6</button>
+					<button id = "number7" class = "number">7</button>
+					<button id = "number8" class = "number">8</button>
+					<button id = "number9" class = "number">9</button>
+					<button id = "placeHolder1" class = "number"></button>
+					<button id = "number0" class = "number">0</button>
+					<button id = "placeHolder2" class = "number"></button>-->
+				</div>
 			</div>
 		</div>
 		<script>
