--- a/mainMenu.html
+++ b/mainMenu.html
@@ -8,8 +8,9 @@
 		<!--<script src="Splash_JS.js" type="text/javascript></script>-->
 		<title>Swinging Monkey</title>
 		</head>
-		<body onload="languageSet()">
+		<body onload="languageSet(); musicSet()">
 		<div id="divBack">
+			
 			<button id="settings" onclick="window.location.href='settings.html'" ></button>
 			<!--<h1 class="headers" id="title">
 			Swinging Monkey</h1>
@@ -23,6 +24,7 @@
 				<button id ="startButton" onclick="window.location.href='testStart.html'"></button>
 				<button id ="tutorialButton" onclick="window.location.href='tutorial.html'"></button>
 				<button id ="highScoresButton" onclick="window.location.href='highScores.html'"></button>
+				<object id="music"height="1" width="1" data="music/panamaHatNV.mp3"></object>
 			<!--</div>-->
 		</div>
 		<script>
@@ -52,6 +54,15 @@
 				//	document.getElementById("startButton").innerHTML="Joue";
 				//	document.getElementById("tutorialButton").innerHTML="Instructions";
 				//	document.getElementById("highScoresButton").innerHTML="Haut Scores"
+				}
+			}
+			
+			function musicSet(){
+				if(localStorage.getItem('music') == 'off'){
+					document.getElementById("music").data = "";
+				}
+				else {
+					document.getElementById("music").data = "music/panamaHatNV.mp3";
 				}
 			}
 
